# starknet-star-tracker

./: .gitignore  README.md  awerta.dot  debug.csv  requirements.txt
github-metrics/: README.md  debug.csv  developer_insights_report.pptx  pyproject.toml  requirements.txt
github-metrics/assets/: style.css
github-metrics/data/source/: all_networks_developer_classification.csv  all_networks_developer_classification_updated_february.csv  all_networks_developer_classification_updated_jun19.csv  all_networks_developer_classification_updated_may27.csv  all_networks_developer_commits_2024-07-20.csv  all_networks_developer_commits_2024-08-08.csv  all_networks_developer_commits_2024-09-13.csv  all_networks_developer_commits_2024-10-09.csv  all_networks_developer_commits_2024-12-03.csv  starknet_downloads.csv
github-metrics/github_metrics/: developer_engagement.py  developer_survival_plot.py  general_insgiths_2.py  general_insights.py  main.py  main_gradio.py  program_evaluation.py  starknet_data.py  utils.py
